# sensorfusion_deepblue_commentversion

./: README.md  git_learn.md  git_learn.txt  howtoupdategit.txt  参考文献地址.md
00-hello-kitti/src/lidar_localization/: CMakeLists.txt
00-hello-kitti/src/lidar_localization/src/: test_frame_node.cpp
00-hello-kitti/src/lidar_localization/src/sensor_data/: gnss_data.cpp
00-hello-kitti/src/lidar_localization/src/subscriber/: gnss_subscriber.cpp
00-hello-kitti/src/lidar_localization/src/tf_listener/: tf_lisener.cpp
01-lidar-odometry/: general_comment_yyx.md
01-lidar-odometry/src/lidar_localization/: .gitignore  CMakeLists.txt
01-lidar-odometry/src/lidar_localization/config/front_end/: config.yaml
01-lidar-odometry/src/lidar_localization/include/lidar_localization/front_end/: comment.md  front_end.hpp  front_end_flow.hpp
01-lidar-odometry/src/lidar_localization/include/lidar_localization/models/registration/: ndt_registration.hpp  registration_interface.hpp
01-lidar-odometry/src/lidar_localization/include/lidar_localization/publisher/: odometry_publisher.hpp
01-lidar-odometry/src/lidar_localization/include/lidar_localization/sensor_data/: cloud_data.hpp  gnss_data.hpp
01-lidar-odometry/src/lidar_localization/slam_data/trajectory/: ground_truth.txt  laser_odom.txt
01-lidar-odometry/src/lidar_localization/src/: front_end_node.cpp
01-lidar-odometry/src/lidar_localization/src/front_end/: front_end.cpp  front_end_flow.cpp
01-lidar-odometry/src/lidar_localization/src/models/cloud_filter/: voxel_filter.cpp
01-lidar-odometry/src/lidar_localization/src/models/registration/: ndt_registration.cpp
01-lidar-odometry/src/lidar_localization/src/publisher/: odometry_publisher.cpp
01-lidar-odometry/src/lidar_localization/src/sensor_data/: gnss_data.cpp  imu_data.cpp
02-loams/src/lidar_localization/include/lidar_localization/models/loam/: aloam_factor.hpp
02-loams/src/lidar_localization/src/: aloam_scan_registration_node.cpp
03-mapping-and-matching/src/lidar_localization/config/matching/: matching.yaml
03-mapping-and-matching/src/lidar_localization/slam_data/: .gitignore
gitpic&book/: howtoupdategit.txt
